--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<!-- Your code here -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<link rel="stylesheet" href="style.css" type="text/css">
+<title>My Site Title</title>
+</head>
+<body>
+<h1>My first header</h1>
+
+</body>
+</html>
